fixed ipad pro project card flex issue, tweaked skill tag spacing

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ hr {
     justify-content: space-between;
     flex-direction: column;
     border-radius: 10px;
-    flex: 0 1 calc(33% - 1em);
+    flex: 0 1 calc(33% - 1.5em);
     padding: 16px;
     margin: 1vh;
     background-color: #485461;
@@ -174,8 +174,8 @@ hr {
     background-image: linear-gradient(315deg, rgba(255,255,255,.1) 0%, black 100%);
     color: white;
     padding: 1%;
-    margin: 1%;
-    width: calc(25% - 1% - 1%)!important;
+    margin: 0 0.5%;
+    width: calc(25% - 0.5% - 1%)!important;
     font-size: calc(7.5px + 1vw);
 }
 
